[package]
name = "aura-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.36", features = ["derive"] }
cloud_terrastodon_core_user_input = { git = "https://github.com/AAFC-Cloud/Cloud-Terrastodon", rev = "1332247ae3fa97e9ff29b4320666782c86d020e5", version = "0.1.0" }
color-eyre = "0.6.3"
eyre = "0.6.12"
itertools = "0.14.0"
# ollama-rs = "0.3.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
vscodehelper-macros = "0.1.0"
